--- a/RESET.HTML
+++ b/RESET.HTML
@@ -6,7 +6,12 @@
     <title>Reset Password</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<div class="navi">
+    <a href="./index.html" class="previous">Previous</a>
+    </div>
+
 <body>
+    
     <form action="reset">
         <h1 class="ForgotP">Forgot Password</h1>
         <p class="Fmassage">Enter your email and we'll send you a link to reset your password.</p>
