--- a/about.html
+++ b/about.html
@@ -1,59 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div  class="mainbody">
-      <div id="aboutme" class="ME">
-        <h1>About Me</h1>
-      </div>
+    <div id="logout">
+        <a href="index.html"><h6 type="logoutbtn" class="logout">Logout</h6></a>
+    </div>
         <div>
-      
-          <p>Hello, I'm Russel. As a seasoned Team Leader, I specialize in managing Indonesian accounts with proficiency in Google Sheets and Microsoft Office. With over 7 years of experience as a Payment Officer, I bring a motivated and dedicated work ethic, coupled with a strong drive to deliver exceptional results. Currently, I'm expanding my expertise as a Web Developer.</p>
-          <p>26 years old, I'm a Information Technology graduate eager to apply my skills in this dynamic field. Residing in Manuyo 1, Las Piñas, Metro Manila, Philippines, I'm ready to embark on new professional challenges and opportunities.</p>
-      </div>
-        <p>My competencies include:</p>
-        <ul>
-          <li>Skilled in planning and organizing with the ability to complete tasks on deadline.</li>
-          <li>Proficient in various tools and software such as Microsoft Office, Google Workspace, Zoom, WordPress, Canva, and more.</li>
-          <li>Capable of programming in HTML and CSS.</li>
-          <li>Fast and accurate typing skills with a strong knowledge of computer applications.</li>
-          <li>Proven ability to collect and manage information efficiently and accurately.</li>
-          <li>Self-starter who can work independently and proactively handle multiple tasks..</li>
-          <li>Adaptable to changing situations and deadlines with a keen eye for detail and accuracy.</li>
-        </ul>
-        <p>Key Responsibilities:</p>
-          <ul>
-            <li>Efficiently managing emails and calendars for busy executives.</li>
-            <li>Coordinating travel plans and accommodations.</li>
-            <li>Developing and maintaining spreadsheets and databases.</li>
-            <li>Conducting research and compiling data for comprehensive reports and presentations.</li>
-            <li>Providing top-notch customer service and resolving inquiries and issues.</li>
-            <li> Overseeing social media platforms and crafting engaging content.</li>
-            <li> Editing and refining documents and web content.</li>
-          </ul>
-        <p>Software Proficiencies:</p>
-          <ul>
-            <li>Microsoft Office Suite</li>
-            <li>Google Workspace</li>
-            <li>Website Development and Management</li>
-            <li>Canva for graphic design</li>
-          </ul>
-        <p>Additional Skills:</p>
-          <ul>
-            <li>Strong leadership and management skills.</li>
-            <li>Transferable skills in various professional settings.</li>
-            <li>Expertise in gathering and synthesizing information.</li>
-          </ul>
+        <a href="home.html"><img src="./LOGO.png" alt="LOGO" height="100"></a>
+           <h1>Little Mini Cooperative</h1>
+           <div id="mainbotton">
+           <a href="home.html"><button type="homebtn"  class="firstpage">home</button></a>
+           <a href="about.html"><button type="aboutbtn" class="firstpage">About</button></a>
+           <a href="rules.html"><button type="rulesbtn" class="firstpage">Rules</button></a>
+        </div>    
+    <h2>About Our Mini Cooperative</h2>
+<h3>Empowering Financial Growth</h5>
 
-  </div>
+Welcome to our Mini Cooperative, where our mission is to empower our members and the community to achieve financial stability and growth. We understand the importance of accessible financial resources, and we're dedicated to providing loans at the lowest interest rates possible.
+
+<p>Why Choose Us?</p>
+
+    <ul>
+        <li>Low-Interest Loans:</li>
+        <ul>
+        <li> We offer loans with minimal interest rates, making borrowing more affordable for everyone.</li>
+    </ul>
+        <li>Savings & Investment Opportunities:</li>
+        <ul>
+        <li> Our cooperative isn't just about loans; we also provide avenues for members to save and invest, fostering a secure financial future.</li>
+    </ul>
+        <li>Community-Centric:</li>
+        <ul>
+        <li> We are committed to the well-being of our members and the broader community, ensuring that our services are tailored to meet their needs.</li>
+    </ul>
+    </ul>
+
+Join Us Today
+
+<p>Become a part of our Mini Cooperative and start your journey towards financial freedom and prosperity. Together, we can build a stronger, financially savvy community.</p>
 </body>
 </html>
-
